--- a/composer.json
+++ b/composer.json
@@ -16,9 +16,21 @@
     "require": {
         "php": "^7.0"
     },
+    "require-dev": {
+        "phpunit/phpunit": "^5.0",
+        "php-coveralls/php-coveralls": "^2.0"
+    },
     "autoload": {
         "psr-0": {
-            "Monolog": "src"
+            "Awixe\\Session": "src"
         }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Awixe\\Session\\Tests": "tests"
+        }
+    },
+    "scripts": {
+        "test": "./vendor/bin/phpunit"
     }
 }
