--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,18 @@
 language: php
+
 php:
-  - '5.4'
-  - '5.6'
   - '7.0'
-  - nightly
+  - '7.1'
+  
 os: windows
+
+before_script:
+  - composer self-update
+  - composer install --no-interaction
+
+script: 
+  - mkdir -p tests/code-coverage
+  - ./vendor/bin/phpunit
+
+after_success:
+  - travis_retry php vendor/bin/coveralls -v
